@@ -3,6 +3,8 @@ scene.camera.lookat.orig = 7.48113203 -6.50763988 5.34366512
 scene.camera.lookat.target = 0.932512999 -0.400983989 0.891211987
 scene.camera.fieldofview = 45
 ################################################################################
+scene.textures.vertcol.type = hitpointcolor
+################################################################################
 scene.materials.mat_light.type = matte
 scene.materials.mat_light.emission = 20. 20. 20.
 scene.materials.mat_light.kd = 0.0 0.0 0.0
@@ -10,7 +12,8 @@ scene.materials.mat_light.kd = 0.0 0.0 0.0
 #scene.materials.mat_light2.emission = light2
 #scene.materials.mat_light2.kd = 0.0 0.0 0.0
 scene.materials.mat_red.type = matte
-scene.materials.mat_red.kd = 0.8 0.0 0.0
+scene.materials.mat_red.kd = vertcol
+#scene.materials.mat_red.kd = 0.8 0.0 0.0
 ##
 scene.materials.mat_white.type = matte
 scene.materials.mat_white.kd = 0.8 0.8 0.8
@@ -22,10 +25,12 @@ scene.materials.mat_white.kd = 0.8 0.8 0.8
 ################################################################################
 scene.shapes.obj_redply.type = mesh
 scene.shapes.obj_redply.ply = scenes/bump/mat_red.ply
-scene.shapes.obj_red.type = subdiv
-scene.shapes.obj_red.source = obj_redply
-scene.shapes.obj_red.maxlevel = 3
-scene.shapes.obj_red.maxedgescreensize = 0.1
+scene.shapes.obj_redsubdiv.type = subdiv
+scene.shapes.obj_redsubdiv.source = obj_redply
+scene.shapes.obj_redsubdiv.maxlevel = 1
+scene.shapes.obj_redsubdiv.maxedgescreensize = 0.1
+scene.shapes.obj_red.type = harlequin
+scene.shapes.obj_red.source = obj_redsubdiv
 ################################################################################
 scene.objects.obj_light.ply = scenes/bump/mat_light.ply
 scene.objects.obj_light.material = mat_light
